# poseGraphOpt

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
g2oMyself/: CMakeLists.txt
g2oMyself/include/: EdgeSE3.h  VertexSE3.h
g2oMyself/src/: EdgeSE3.cpp  VertexSE3.cpp
g2oSE3/: CMakeLists.txt
g2oSE3/include/: g2oSE3.h
g2oSE3/src/: g2oSE3.cpp  main.cpp
result/: result.g2o
src/: main.cpp
